parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID ; program1
Rule 2     program1 -> var program1
Rule 3     program1 -> program2
Rule 4     program2 -> proc program2
Rule 5     program2 -> main
Rule 6     procs -> proc
Rule 7     procs -> proc procs
Rule 8     proc -> proca1 procA
Rule 9     proc -> VOID proca2 procA
Rule 10    proc -> empty
Rule 11    proca2 -> ID (
Rule 12    proca1 -> datatype ID (
Rule 13    procA -> proc1 ) { proc3 }
Rule 14    proc1 -> n_push_variable proc2
Rule 15    proc1 -> empty
Rule 16    proc2 -> , n_push_variable proc2
Rule 17    proc2 -> empty
Rule 18    n_push_variable -> datatype ID
Rule 19    proc3 -> var proc3
Rule 20    proc3 -> n_quad_counter proc4
Rule 21    n_quad_counter -> <empty>
Rule 22    proc4 -> statement proc4
Rule 23    proc4 -> empty
Rule 24    vars -> var vars
Rule 25    vars -> var
Rule 26    var -> datatype var1
Rule 27    var1 -> ID , var1
Rule 28    var1 -> ID var2
Rule 29    var2 -> ;
Rule 30    assignment -> assignment2 ASSIGNATOR n_quad_assign expression
Rule 31    assignment2 -> ID
Rule 32    n_quad_assign -> <empty>
Rule 33    condition -> IF ( expression n_while_2 ) block condition1
Rule 34    condition1 -> ELSE n_if_2 block n_if_3
Rule 35    condition1 -> n_if_3
Rule 36    n_if_2 -> <empty>
Rule 37    n_if_3 -> <empty>
Rule 38    while -> WHILE n_while_1 ( expression ) n_while_2 block n_while_3
Rule 39    n_while_1 -> <empty>
Rule 40    n_while_2 -> <empty>
Rule 41    n_while_3 -> <empty>
Rule 42    input -> READ ( n_process_read input1 )
Rule 43    input1 -> , n_process_read input1
Rule 44    input1 -> empty
Rule 45    n_process_read -> ID
Rule 46    output -> PRINT ( n_output_quad output1 )
Rule 47    output1 -> , n_output_quad output1
Rule 48    output1 -> empty
Rule 49    n_output_quad -> expression
Rule 50    function_call -> n_era_size function_call1 )
Rule 51    n_era_size -> ID (
Rule 52    function_call1 -> empty
Rule 53    function_call1 -> function_call2
Rule 54    function_call2 -> n_verify_argument , n_add_one_to_counter function_call2
Rule 55    function_call2 -> n_verify_argument
Rule 56    n_add_one_to_counter -> <empty>
Rule 57    n_verify_argument -> expression
Rule 58    return -> RETURN expression
Rule 59    set_operation -> ID . OPERATION ( set_operation1 )
Rule 60    set_operation1 -> expression
Rule 61    set_operation1 -> empty
Rule 62    statement -> statement1 ;
Rule 63    statement -> statement2
Rule 64    statement1 -> assignment
Rule 65    statement1 -> input
Rule 66    statement1 -> output
Rule 67    statement1 -> set_operation
Rule 68    statement1 -> map_definition
Rule 69    statement1 -> return
Rule 70    statement1 -> map_assignment
Rule 71    statement1 -> map_operation
Rule 72    statement1 -> function_call
Rule 73    statement2 -> condition
Rule 74    statement2 -> while
Rule 75    relop -> <
Rule 76    relop -> >
Rule 77    relop -> NOT_EQ
Rule 78    relop -> EQ
Rule 79    relop -> LEQ
Rule 80    relop -> GEQ
Rule 81    logop -> OR
Rule 82    logop -> AND
Rule 83    expression -> exp0 expression2
Rule 84    expression2 -> logop exp0 n_quad_logop expression2
Rule 85    expression2 -> empty
Rule 86    n_quad_logop -> <empty>
Rule 87    exp0 -> exp exp02
Rule 88    exp02 -> relop exp
Rule 89    exp02 -> empty
Rule 90    exp -> term exp2
Rule 91    addsub -> +
Rule 92    addsub -> -
Rule 93    muldiv -> *
Rule 94    muldiv -> /
Rule 95    exp2 -> addsub term n_quad_addsub exp2
Rule 96    exp2 -> empty
Rule 97    term -> term_not factor n_quad_muldiv term2
Rule 98    n_quad_muldiv -> <empty>
Rule 99    n_quad_addsub -> <empty>
Rule 100   term2 -> muldiv factor n_quad_muldiv term2
Rule 101   term2 -> n_quad_not
Rule 102   n_quad_not -> <empty>
Rule 103   term_not -> !
Rule 104   term_not -> empty
Rule 105   factor -> ( n_push_false_bottom expression ) n_pop_false_bottom
Rule 106   factor -> varcte
Rule 107   n_push_false_bottom -> <empty>
Rule 108   n_pop_false_bottom -> <empty>
Rule 109   varcte -> ID empty
Rule 110   varcte -> varcte1
Rule 111   varcte1 -> CTE_INT
Rule 112   varcte1 -> CTE_FLOAT
Rule 113   varcte1 -> CTE_BOOL
Rule 114   varcte1 -> CTE_STRING
Rule 115   varcte1 -> CTE_CHAR
Rule 116   varcte1 -> function_call
Rule 117   varcte1 -> map_access
Rule 118   varcte1 -> map_operation
Rule 119   varcte1 -> set_operation
Rule 120   functype -> datatype
Rule 121   functype -> VOID
Rule 122   datatype -> INT
Rule 123   datatype -> FLOAT
Rule 124   datatype -> BOOL
Rule 125   datatype -> STRING
Rule 126   datatype -> CHAR
Rule 127   datatype -> set_definition
Rule 128   datatype -> map_definition
Rule 129   set_definition -> SET < datatype >
Rule 130   block -> { statement_aux }
Rule 131   statement_aux -> statement statement_aux
Rule 132   statement_aux -> empty
Rule 133   main -> MAIN n_clear_scope { vars_aux statement_aux }
Rule 134   n_clear_scope -> <empty>
Rule 135   vars_aux -> vars
Rule 136   vars_aux -> empty
Rule 137   map_definition -> MAP < datatype , datatype >
Rule 138   map_access -> ID [ exp ]
Rule 139   map_assignment -> map_access ASSIGNATOR exp
Rule 140   map_operation -> ID . OPERATION ( )
Rule 141   empty -> <empty>

Terminals, with rules where they appear

!                    : 103
(                    : 11 12 33 38 42 46 51 59 105 140
)                    : 13 33 38 42 46 50 59 105 140
*                    : 93
+                    : 91
,                    : 16 27 43 47 54 137
-                    : 92
.                    : 59 140
/                    : 94
;                    : 1 29 62
<                    : 75 129 137
>                    : 76 129 137
AND                  : 82
ASSIGNATOR           : 30 139
BOOL                 : 124
CHAR                 : 126
CTE_BOOL             : 113
CTE_CHAR             : 115
CTE_FLOAT            : 112
CTE_INT              : 111
CTE_STRING           : 114
ELSE                 : 34
EQ                   : 78
FLOAT                : 123
GEQ                  : 80
ID                   : 1 11 12 18 27 28 31 45 51 59 109 138 140
IF                   : 33
INT                  : 122
LEQ                  : 79
MAIN                 : 133
MAP                  : 137
NOT_EQ               : 77
OPERATION            : 59 140
OR                   : 81
PRINT                : 46
PROGRAM              : 1
READ                 : 42
RETURN               : 58
SET                  : 129
STRING               : 125
VOID                 : 9 121
WHILE                : 38
[                    : 138
]                    : 138
error                : 
{                    : 13 130 133
}                    : 13 130 133

Nonterminals, with rules where they appear

addsub               : 95
assignment           : 64
assignment2          : 30
block                : 33 34 38
condition            : 73
condition1           : 33
datatype             : 12 18 26 120 129 137 137
empty                : 10 15 17 23 44 48 52 61 85 89 96 104 109 132 136
exp                  : 87 88 138 139
exp0                 : 83 84
exp02                : 87
exp2                 : 90 95
expression           : 30 33 38 49 57 58 60 105
expression2          : 83 84
factor               : 97 100
function_call        : 72 116
function_call1       : 50
function_call2       : 53 54
functype             : 
input                : 65
input1               : 42 43
logop                : 84
main                 : 5
map_access           : 117 139
map_assignment       : 70
map_definition       : 68 128
map_operation        : 71 118
muldiv               : 100
n_add_one_to_counter : 54
n_clear_scope        : 133
n_era_size           : 50
n_if_2               : 34
n_if_3               : 34 35
n_output_quad        : 46 47
n_pop_false_bottom   : 105
n_process_read       : 42 43
n_push_false_bottom  : 105
n_push_variable      : 14 16
n_quad_addsub        : 95
n_quad_assign        : 30
n_quad_counter       : 20
n_quad_logop         : 84
n_quad_muldiv        : 97 100
n_quad_not           : 101
n_verify_argument    : 54 55
n_while_1            : 38
n_while_2            : 33 38
n_while_3            : 38
output               : 66
output1              : 46 47
proc                 : 4 6 7
proc1                : 13
proc2                : 14 16
proc3                : 13 19
proc4                : 20 22
procA                : 8 9
proca1               : 8
proca2               : 9
procs                : 7
program              : 0
program1             : 1 2
program2             : 3 4
relop                : 88
return               : 69
set_definition       : 127
set_operation        : 67 119
set_operation1       : 59
statement            : 22 131
statement1           : 62
statement2           : 63
statement_aux        : 130 131 133
term                 : 90 95
term2                : 97 100
term_not             : 97
var                  : 2 19 24 25
var1                 : 26 27
var2                 : 28
varcte               : 106
varcte1              : 110
vars                 : 24 135
vars_aux             : 133
while                : 74

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID ; program1

    PROGRAM         shift and go to state 1

    program                        shift and go to state 2

state 1

    (1) program -> PROGRAM . ID ; program1

    ID              shift and go to state 3


state 2

    (0) S' -> program .



state 3

    (1) program -> PROGRAM ID . ; program1

    ;               shift and go to state 4


state 4

    (1) program -> PROGRAM ID ; . program1
    (2) program1 -> . var program1
    (3) program1 -> . program2
    (26) var -> . datatype var1
    (4) program2 -> . proc program2
    (5) program2 -> . main
    (122) datatype -> . INT
    (123) datatype -> . FLOAT
    (124) datatype -> . BOOL
    (125) datatype -> . STRING
    (126) datatype -> . CHAR
    (127) datatype -> . set_definition
    (128) datatype -> . map_definition
    (8) proc -> . proca1 procA
    (9) proc -> . VOID proca2 procA
    (10) proc -> . empty
    (133) main -> . MAIN n_clear_scope { vars_aux statement_aux }
    (129) set_definition -> . SET < datatype >
    (137) map_definition -> . MAP < datatype , datatype >
    (12) proca1 -> . datatype ID (
    (141) empty -> .

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for MAIN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for SET resolved as shift
  ! shift/reduce conflict for MAP resolved as shift
    INT             shift and go to state 21
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 22
    STRING          shift and go to state 16
    CHAR            shift and go to state 7
    VOID            shift and go to state 5
    MAIN            shift and go to state 23
    SET             shift and go to state 8
    MAP             shift and go to state 17

  ! VOID            [ reduce using rule 141 (empty -> .) ]
  ! MAIN            [ reduce using rule 141 (empty -> .) ]
  ! INT             [ reduce using rule 141 (empty -> .) ]
  ! FLOAT           [ reduce using rule 141 (empty -> .) ]
  ! BOOL            [ reduce using rule 141 (empty -> .) ]
  ! STRING          [ reduce using rule 141 (empty -> .) ]
  ! CHAR            [ reduce using rule 141 (empty -> .) ]
  ! SET             [ reduce using rule 141 (empty -> .) ]
  ! MAP             [ reduce using rule 141 (empty -> .) ]

    program1                       shift and go to state 9
    program2                       shift and go to state 10
    datatype                       shift and go to state 19
    proca1                         shift and go to state 11
    map_definition                 shift and go to state 6
    set_definition                 shift and go to state 18
    var                            shift and go to state 12
    main                           shift and go to state 13
    proc                           shift and go to state 14
    empty                          shift and go to state 15

state 5

    (9) proc -> VOID . proca2 procA
    (11) proca2 -> . ID (

    ID              shift and go to state 24

    proca2                         shift and go to state 25

state 6

    (128) datatype -> map_definition .

    ID              reduce using rule 128 (datatype -> map_definition .)
    ,               reduce using rule 128 (datatype -> map_definition .)
    >               reduce using rule 128 (datatype -> map_definition .)


state 7

    (126) datatype -> CHAR .

    ID              reduce using rule 126 (datatype -> CHAR .)
    ,               reduce using rule 126 (datatype -> CHAR .)
    >               reduce using rule 126 (datatype -> CHAR .)


state 8

    (129) set_definition -> SET . < datatype >

    <               shift and go to state 26


state 9

    (1) program -> PROGRAM ID ; program1 .

    $end            reduce using rule 1 (program -> PROGRAM ID ; program1 .)


state 10

    (3) program1 -> program2 .

    $end            reduce using rule 3 (program1 -> program2 .)


state 11

    (8) proc -> proca1 . procA
    (13) procA -> . proc1 ) { proc3 }
    (14) proc1 -> . n_push_variable proc2
    (15) proc1 -> . empty
    (18) n_push_variable -> . datatype ID
    (141) empty -> .
    (122) datatype -> . INT
    (123) datatype -> . FLOAT
    (124) datatype -> . BOOL
    (125) datatype -> . STRING
    (126) datatype -> . CHAR
    (127) datatype -> . set_definition
    (128) datatype -> . map_definition
    (129) set_definition -> . SET < datatype >
    (137) map_definition -> . MAP < datatype , datatype >

    )               reduce using rule 141 (empty -> .)
    INT             shift and go to state 21
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 22
    STRING          shift and go to state 16
    CHAR            shift and go to state 7
    SET             shift and go to state 8
    MAP             shift and go to state 17

    n_push_variable                shift and go to state 29
    set_definition                 shift and go to state 18
    datatype                       shift and go to state 30
    procA                          shift and go to state 31
    empty                          shift and go to state 28
    map_definition                 shift and go to state 6
    proc1                          shift and go to state 27

state 12

    (2) program1 -> var . program1
    (2) program1 -> . var program1
    (3) program1 -> . program2
    (26) var -> . datatype var1
    (4) program2 -> . proc program2
    (5) program2 -> . main
    (122) datatype -> . INT
    (123) datatype -> . FLOAT
    (124) datatype -> . BOOL
    (125) datatype -> . STRING
    (126) datatype -> . CHAR
    (127) datatype -> . set_definition
    (128) datatype -> . map_definition
    (8) proc -> . proca1 procA
    (9) proc -> . VOID proca2 procA
    (10) proc -> . empty
    (133) main -> . MAIN n_clear_scope { vars_aux statement_aux }
    (129) set_definition -> . SET < datatype >
    (137) map_definition -> . MAP < datatype , datatype >
    (12) proca1 -> . datatype ID (
    (141) empty -> .

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for MAIN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for SET resolved as shift
  ! shift/reduce conflict for MAP resolved as shift
    INT             shift and go to state 21
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 22
    STRING          shift and go to state 16
    CHAR            shift and go to state 7
    VOID            shift and go to state 5
    MAIN            shift and go to state 23
    SET             shift and go to state 8
    MAP             shift and go to state 17

  ! VOID            [ reduce using rule 141 (empty -> .) ]
  ! MAIN            [ reduce using rule 141 (empty -> .) ]
  ! INT             [ reduce using rule 141 (empty -> .) ]
  ! FLOAT           [ reduce using rule 141 (empty -> .) ]
  ! BOOL            [ reduce using rule 141 (empty -> .) ]
  ! STRING          [ reduce using rule 141 (empty -> .) ]
  ! CHAR            [ reduce using rule 141 (empty -> .) ]
  ! SET             [ reduce using rule 141 (empty -> .) ]
  ! MAP             [ reduce using rule 141 (empty -> .) ]

    program1                       shift and go to state 32
    program2                       shift and go to state 10
    datatype                       shift and go to state 19
    proca1                         shift and go to state 11
    map_definition                 shift and go to state 6
    set_definition                 shift and go to state 18
    var                            shift and go to state 12
    main                           shift and go to state 13
    proc                           shift and go to state 14
    empty                          shift and go to state 15

state 13

    (5) program2 -> main .

    $end            reduce using rule 5 (program2 -> main .)


state 14

    (4) program2 -> proc . program2
    (4) program2 -> . proc program2
    (5) program2 -> . main
    (8) proc -> . proca1 procA
    (9) proc -> . VOID proca2 procA
    (10) proc -> . empty
    (133) main -> . MAIN n_clear_scope { vars_aux statement_aux }
    (12) proca1 -> . datatype ID (
    (141) empty -> .
    (122) datatype -> . INT
    (123) datatype -> . FLOAT
    (124) datatype -> . BOOL
    (125) datatype -> . STRING
    (126) datatype -> . CHAR
    (127) datatype -> . set_definition
    (128) datatype -> . map_definition
    (129) set_definition -> . SET < datatype >
    (137) map_definition -> . MAP < datatype , datatype >

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for MAIN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for SET resolved as shift
  ! shift/reduce conflict for MAP resolved as shift
    VOID            shift and go to state 5
    MAIN            shift and go to state 23
    INT             shift and go to state 21
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 22
    STRING          shift and go to state 16
    CHAR            shift and go to state 7
    SET             shift and go to state 8
    MAP             shift and go to state 17

  ! VOID            [ reduce using rule 141 (empty -> .) ]
  ! MAIN            [ reduce using rule 141 (empty -> .) ]
  ! INT             [ reduce using rule 141 (empty -> .) ]
  ! FLOAT           [ reduce using rule 141 (empty -> .) ]
  ! BOOL            [ reduce using rule 141 (empty -> .) ]
  ! STRING          [ reduce using rule 141 (empty -> .) ]
  ! CHAR            [ reduce using rule 141 (empty -> .) ]
  ! SET             [ reduce using rule 141 (empty -> .) ]
  ! MAP             [ reduce using rule 141 (empty -> .) ]

    set_definition                 shift and go to state 18
    program2                       shift and go to state 33
    datatype                       shift and go to state 34
    proca1                         shift and go to state 11
    map_definition                 shift and go to state 6
    main                           shift and go to state 13
    proc                           shift and go to state 14
    empty                          shift and go to state 15

state 15

    (10) proc -> empty .

    VOID            reduce using rule 10 (proc -> empty .)
    MAIN            reduce using rule 10 (proc -> empty .)
    INT             reduce using rule 10 (proc -> empty .)
    FLOAT           reduce using rule 10 (proc -> empty .)
    BOOL            reduce using rule 10 (proc -> empty .)
    STRING          reduce using rule 10 (proc -> empty .)
    CHAR            reduce using rule 10 (proc -> empty .)
    SET             reduce using rule 10 (proc -> empty .)
    MAP             reduce using rule 10 (proc -> empty .)


state 16

    (125) datatype -> STRING .

    ID              reduce using rule 125 (datatype -> STRING .)
    ,               reduce using rule 125 (datatype -> STRING .)
    >               reduce using rule 125 (datatype -> STRING .)


state 17

    (137) map_definition -> MAP . < datatype , datatype >

    <               shift and go to state 35


state 18

    (127) datatype -> set_definition .

    ID              reduce using rule 127 (datatype -> set_definition .)
    ,               reduce using rule 127 (datatype -> set_definition .)
    >               reduce using rule 127 (datatype -> set_definition .)


state 19

    (26) var -> datatype . var1
    (12) proca1 -> datatype . ID (
    (27) var1 -> . ID , var1
    (28) var1 -> . ID var2

    ID              shift and go to state 37

    var1                           shift and go to state 36

state 20

    (123) datatype -> FLOAT .

    ID              reduce using rule 123 (datatype -> FLOAT .)
    ,               reduce using rule 123 (datatype -> FLOAT .)
    >               reduce using rule 123 (datatype -> FLOAT .)


state 21

    (122) datatype -> INT .

    ID              reduce using rule 122 (datatype -> INT .)
    ,               reduce using rule 122 (datatype -> INT .)
    >               reduce using rule 122 (datatype -> INT .)


state 22

    (124) datatype -> BOOL .

    ID              reduce using rule 124 (datatype -> BOOL .)
    ,               reduce using rule 124 (datatype -> BOOL .)
    >               reduce using rule 124 (datatype -> BOOL .)


state 23

    (133) main -> MAIN . n_clear_scope { vars_aux statement_aux }
    (134) n_clear_scope -> .

    {               reduce using rule 134 (n_clear_scope -> .)

    n_clear_scope                  shift and go to state 38

state 24

    (11) proca2 -> ID . (

    (               shift and go to state 39


state 25

    (9) proc -> VOID proca2 . procA
    (13) procA -> . proc1 ) { proc3 }
    (14) proc1 -> . n_push_variable proc2
    (15) proc1 -> . empty
    (18) n_push_variable -> . datatype ID
    (141) empty -> .
    (122) datatype -> . INT
    (123) datatype -> . FLOAT
    (124) datatype -> . BOOL
    (125) datatype -> . STRING
    (126) datatype -> . CHAR
    (127) datatype -> . set_definition
    (128) datatype -> . map_definition
    (129) set_definition -> . SET < datatype >
    (137) map_definition -> . MAP < datatype , datatype >

    )               reduce using rule 141 (empty -> .)
    INT             shift and go to state 21
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 22
    STRING          shift and go to state 16
    CHAR            shift and go to state 7
    SET             shift and go to state 8
    MAP             shift and go to state 17

    n_push_variable                shift and go to state 29
    set_definition                 shift and go to state 18
    datatype                       shift and go to state 30
    map_definition                 shift and go to state 6
    procA                          shift and go to state 40
    empty                          shift and go to state 28
    proc1                          shift and go to state 27

state 26

    (129) set_definition -> SET < . datatype >
    (122) datatype -> . INT
    (123) datatype -> . FLOAT
    (124) datatype -> . BOOL
    (125) datatype -> . STRING
    (126) datatype -> . CHAR
    (127) datatype -> . set_definition
    (128) datatype -> . map_definition
    (129) set_definition -> . SET < datatype >
    (137) map_definition -> . MAP < datatype , datatype >

    INT             shift and go to state 21
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 22
    STRING          shift and go to state 16
    CHAR            shift and go to state 7
    SET             shift and go to state 8
    MAP             shift and go to state 17

    datatype                       shift and go to state 41
    map_definition                 shift and go to state 6
    set_definition                 shift and go to state 18

state 27

    (13) procA -> proc1 . ) { proc3 }

    )               shift and go to state 42


state 28

    (15) proc1 -> empty .

    )               reduce using rule 15 (proc1 -> empty .)


state 29

    (14) proc1 -> n_push_variable . proc2
    (16) proc2 -> . , n_push_variable proc2
    (17) proc2 -> . empty
    (141) empty -> .

    ,               shift and go to state 43
    )               reduce using rule 141 (empty -> .)

    empty                          shift and go to state 44
    proc2                          shift and go to state 45

state 30

    (18) n_push_variable -> datatype . ID

    ID              shift and go to state 46


state 31

    (8) proc -> proca1 procA .

    VOID            reduce using rule 8 (proc -> proca1 procA .)
    MAIN            reduce using rule 8 (proc -> proca1 procA .)
    INT             reduce using rule 8 (proc -> proca1 procA .)
    FLOAT           reduce using rule 8 (proc -> proca1 procA .)
    BOOL            reduce using rule 8 (proc -> proca1 procA .)
    STRING          reduce using rule 8 (proc -> proca1 procA .)
    CHAR            reduce using rule 8 (proc -> proca1 procA .)
    SET             reduce using rule 8 (proc -> proca1 procA .)
    MAP             reduce using rule 8 (proc -> proca1 procA .)


state 32

    (2) program1 -> var program1 .

    $end            reduce using rule 2 (program1 -> var program1 .)


state 33

    (4) program2 -> proc program2 .

    $end            reduce using rule 4 (program2 -> proc program2 .)


state 34

    (12) proca1 -> datatype . ID (

    ID              shift and go to state 47


state 35

    (137) map_definition -> MAP < . datatype , datatype >
    (122) datatype -> . INT
    (123) datatype -> . FLOAT
    (124) datatype -> . BOOL
    (125) datatype -> . STRING
    (126) datatype -> . CHAR
    (127) datatype -> . set_definition
    (128) datatype -> . map_definition
    (129) set_definition -> . SET < datatype >
    (137) map_definition -> . MAP < datatype , datatype >

    INT             shift and go to state 21
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 22
    STRING          shift and go to state 16
    CHAR            shift and go to state 7
    SET             shift and go to state 8
    MAP             shift and go to state 17

    datatype                       shift and go to state 48
    map_definition                 shift and go to state 6
    set_definition                 shift and go to state 18

state 36

    (26) var -> datatype var1 .

    INT             reduce using rule 26 (var -> datatype var1 .)
    FLOAT           reduce using rule 26 (var -> datatype var1 .)
    BOOL            reduce using rule 26 (var -> datatype var1 .)
    STRING          reduce using rule 26 (var -> datatype var1 .)
    CHAR            reduce using rule 26 (var -> datatype var1 .)
    SET             reduce using rule 26 (var -> datatype var1 .)
    MAP             reduce using rule 26 (var -> datatype var1 .)
    READ            reduce using rule 26 (var -> datatype var1 .)
    PRINT           reduce using rule 26 (var -> datatype var1 .)
    ID              reduce using rule 26 (var -> datatype var1 .)
    RETURN          reduce using rule 26 (var -> datatype var1 .)
    IF              reduce using rule 26 (var -> datatype var1 .)
    WHILE           reduce using rule 26 (var -> datatype var1 .)
    }               reduce using rule 26 (var -> datatype var1 .)
    VOID            reduce using rule 26 (var -> datatype var1 .)
    MAIN            reduce using rule 26 (var -> datatype var1 .)


state 37

    (12) proca1 -> datatype ID . (
    (27) var1 -> ID . , var1
    (28) var1 -> ID . var2
    (29) var2 -> . ;

    (               shift and go to state 50
    ,               shift and go to state 51
    ;               shift and go to state 52

    var2                           shift and go to state 49

state 38

    (133) main -> MAIN n_clear_scope . { vars_aux statement_aux }

    {               shift and go to state 53


state 39

    (11) proca2 -> ID ( .

    INT             reduce using rule 11 (proca2 -> ID ( .)
    FLOAT           reduce using rule 11 (proca2 -> ID ( .)
    BOOL            reduce using rule 11 (proca2 -> ID ( .)
    STRING          reduce using rule 11 (proca2 -> ID ( .)
    CHAR            reduce using rule 11 (proca2 -> ID ( .)
    SET             reduce using rule 11 (proca2 -> ID ( .)
    MAP             reduce using rule 11 (proca2 -> ID ( .)
    )               reduce using rule 11 (proca2 -> ID ( .)


state 40

    (9) proc -> VOID proca2 procA .

    VOID            reduce using rule 9 (proc -> VOID proca2 procA .)
    MAIN            reduce using rule 9 (proc -> VOID proca2 procA .)
    INT             reduce using rule 9 (proc -> VOID proca2 procA .)
    FLOAT           reduce using rule 9 (proc -> VOID proca2 procA .)
    BOOL            reduce using rule 9 (proc -> VOID proca2 procA .)
    STRING          reduce using rule 9 (proc -> VOID proca2 procA .)
    CHAR            reduce using rule 9 (proc -> VOID proca2 procA .)
    SET             reduce using rule 9 (proc -> VOID proca2 procA .)
    MAP             reduce using rule 9 (proc -> VOID proca2 procA .)


state 41

    (129) set_definition -> SET < datatype . >

    >               shift and go to state 54


state 42

    (13) procA -> proc1 ) . { proc3 }

    {               shift and go to state 55


state 43

    (16) proc2 -> , . n_push_variable proc2
    (18) n_push_variable -> . datatype ID
    (122) datatype -> . INT
    (123) datatype -> . FLOAT
    (124) datatype -> . BOOL
    (125) datatype -> . STRING
    (126) datatype -> . CHAR
    (127) datatype -> . set_definition
    (128) datatype -> . map_definition
    (129) set_definition -> . SET < datatype >
    (137) map_definition -> . MAP < datatype , datatype >

    INT             shift and go to state 21
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 22
    STRING          shift and go to state 16
    CHAR            shift and go to state 7
    SET             shift and go to state 8
    MAP             shift and go to state 17

    datatype                       shift and go to state 30
    n_push_variable                shift and go to state 56
    map_definition                 shift and go to state 6
    set_definition                 shift and go to state 18

state 44

    (17) proc2 -> empty .

    )               reduce using rule 17 (proc2 -> empty .)


state 45

    (14) proc1 -> n_push_variable proc2 .

    )               reduce using rule 14 (proc1 -> n_push_variable proc2 .)


state 46

    (18) n_push_variable -> datatype ID .

    ,               reduce using rule 18 (n_push_variable -> datatype ID .)
    )               reduce using rule 18 (n_push_variable -> datatype ID .)


state 47

    (12) proca1 -> datatype ID . (

    (               shift and go to state 50


state 48

    (137) map_definition -> MAP < datatype . , datatype >

    ,               shift and go to state 57


state 49

    (28) var1 -> ID var2 .

    INT             reduce using rule 28 (var1 -> ID var2 .)
    FLOAT           reduce using rule 28 (var1 -> ID var2 .)
    BOOL            reduce using rule 28 (var1 -> ID var2 .)
    STRING          reduce using rule 28 (var1 -> ID var2 .)
    CHAR            reduce using rule 28 (var1 -> ID var2 .)
    VOID            reduce using rule 28 (var1 -> ID var2 .)
    MAIN            reduce using rule 28 (var1 -> ID var2 .)
    SET             reduce using rule 28 (var1 -> ID var2 .)
    MAP             reduce using rule 28 (var1 -> ID var2 .)
    READ            reduce using rule 28 (var1 -> ID var2 .)
    PRINT           reduce using rule 28 (var1 -> ID var2 .)
    ID              reduce using rule 28 (var1 -> ID var2 .)
    RETURN          reduce using rule 28 (var1 -> ID var2 .)
    IF              reduce using rule 28 (var1 -> ID var2 .)
    WHILE           reduce using rule 28 (var1 -> ID var2 .)
    }               reduce using rule 28 (var1 -> ID var2 .)


state 50

    (12) proca1 -> datatype ID ( .

    INT             reduce using rule 12 (proca1 -> datatype ID ( .)
    FLOAT           reduce using rule 12 (proca1 -> datatype ID ( .)
    BOOL            reduce using rule 12 (proca1 -> datatype ID ( .)
    STRING          reduce using rule 12 (proca1 -> datatype ID ( .)
    CHAR            reduce using rule 12 (proca1 -> datatype ID ( .)
    SET             reduce using rule 12 (proca1 -> datatype ID ( .)
    MAP             reduce using rule 12 (proca1 -> datatype ID ( .)
    )               reduce using rule 12 (proca1 -> datatype ID ( .)


state 51

    (27) var1 -> ID , . var1
    (27) var1 -> . ID , var1
    (28) var1 -> . ID var2

    ID              shift and go to state 59

    var1                           shift and go to state 58

state 52

    (29) var2 -> ; .

    INT             reduce using rule 29 (var2 -> ; .)
    FLOAT           reduce using rule 29 (var2 -> ; .)
    BOOL            reduce using rule 29 (var2 -> ; .)
    STRING          reduce using rule 29 (var2 -> ; .)
    CHAR            reduce using rule 29 (var2 -> ; .)
    VOID            reduce using rule 29 (var2 -> ; .)
    MAIN            reduce using rule 29 (var2 -> ; .)
    SET             reduce using rule 29 (var2 -> ; .)
    MAP             reduce using rule 29 (var2 -> ; .)
    READ            reduce using rule 29 (var2 -> ; .)
    PRINT           reduce using rule 29 (var2 -> ; .)
    ID              reduce using rule 29 (var2 -> ; .)
    RETURN          reduce using rule 29 (var2 -> ; .)
    IF              reduce using rule 29 (var2 -> ; .)
    WHILE           reduce using rule 29 (var2 -> ; .)
    }               reduce using rule 29 (var2 -> ; .)


state 53

    (133) main -> MAIN n_clear_scope { . vars_aux statement_aux }
    (135) vars_aux -> . vars
    (136) vars_aux -> . empty
    (24) vars -> . var vars
    (25) vars -> . var
    (141) empty -> .
    (26) var -> . datatype var1
    (122) datatype -> . INT
    (123) datatype -> . FLOAT
    (124) datatype -> . BOOL
    (125) datatype -> . STRING
    (126) datatype -> . CHAR
    (127) datatype -> . set_definition
    (128) datatype -> . map_definition
    (129) set_definition -> . SET < datatype >
    (137) map_definition -> . MAP < datatype , datatype >

  ! shift/reduce conflict for MAP resolved as shift
    READ            reduce using rule 141 (empty -> .)
    PRINT           reduce using rule 141 (empty -> .)
    ID              reduce using rule 141 (empty -> .)
    RETURN          reduce using rule 141 (empty -> .)
    IF              reduce using rule 141 (empty -> .)
    WHILE           reduce using rule 141 (empty -> .)
    }               reduce using rule 141 (empty -> .)
    INT             shift and go to state 21
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 22
    STRING          shift and go to state 16
    CHAR            shift and go to state 7
    SET             shift and go to state 8
    MAP             shift and go to state 17

  ! MAP             [ reduce using rule 141 (empty -> .) ]

    set_definition                 shift and go to state 18
    vars                           shift and go to state 60
    datatype                       shift and go to state 64
    map_definition                 shift and go to state 6
    vars_aux                       shift and go to state 61
    var                            shift and go to state 62
    empty                          shift and go to state 63

state 54

    (129) set_definition -> SET < datatype > .
